kubernetes/apps/news/graby/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: news-graby
  labels: &id001
    app.kubernetes.io/name: news-graby
spec:
  type: ClusterIP
  selector: *id001
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
